making some color changes

--- a/templates/intern.html
+++ b/templates/intern.html
@@ -1,9 +1,9 @@
 <div class="card m-3 " style="width: 20rem;">
-    <div class="card-header text-white bg-primary">
+    <div class="card-header text-white bg-danger">
         <h3>${intern.name}</h3>
-        <h5>${intern.getRole()}</h5>
+        <h5>${intern.getPosition()}</h5>
     </div>
-    <div class="card-body bg-light text-dark">
+    <div class="card-body bg-dark text-dark">
         <ul class="list-group">
             <li class="list-group-item" style="font-size: 14px;">ID: ${intern.id}</li>
             <li class="list-group-item" style="font-size: 14px;">Email: ${intern.email}</li>
