--- a/templates/main.html
+++ b/templates/main.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>My Dream Team</title>
+    <title>Employee List</title>
 </head>
 <body>
     <div class="container-fluid">
-        <div class="row" style="background-color: #e94754; height: 130px;">
-            <p class="mx-auto my-auto" style="font-size: 40px; color: #ffffff;">My Dream Team</p>
+        <div class="row" style="background-color: purple; height: 130px;">
+            <p class="mx-auto my-auto" style="font-size: 40px; color: #ffffff;">The A-Team/p>
         </div>
         <div class="row mt-5">
             <div class="col-md-2"></div>
