--- a/templates/manager.html
+++ b/templates/manager.html
@@ -1,7 +1,7 @@
 <div class="card m-3 " style="width: 20rem;">
     <div class="card-header text-white bg-primary">
         <h3>${manager.name}</h3>
-        <h5>${manager.getRole()}</h5>
+        <h5>${manager.getPosition()}</h5>
     </div>
     <div class="card-body bg-light text-dark">
         <ul class="list-group">
