--- a/templates/main.html
+++ b/templates/main.html
@@ -10,16 +10,16 @@
 <body>
     <div class="container-fluid">
         <div class="row" style="background-color: purple; height: 130px;">
-            <p class="mx-auto my-auto" style="font-size: 40px; color: #ffffff;">The A-Team/p>
+            <p class="mx-auto my-auto" style="font-size: 40px; color: #ffffff;">Employee Summary</p>
         </div>
-        <div class="row mt-5">
-            <div class="col-md-2"></div>
-            <div class="col-md-8">
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
                 <div class="row justify-content-center">
-                    ${teamHTML}
+                    ${teamTemplates}
                 </div>
             </div>
-            <div class="col-md-2"></div>
+            <div class="col-md-1"></div>
         </div>
     </div>
 </body>
